Fixed download link text for calendar overflow issues.

--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -186,7 +186,7 @@ $admin-nav-font: 16px/18px $site-nav-font-family;
       color: #939598;
       float: left;
       font: $site-nav-font;
-      height: 95px;
+      height: 120px;
       margin: 0 5px 5px 0;
       padding: 15px;
       position: relative;
